--- a/CFFollowingWPF/MainWindow.xaml
+++ b/CFFollowingWPF/MainWindow.xaml
@@ -1,13 +1,109 @@
 ﻿<Window x:Class="CFFollowingWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
+        xmlns:material="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+        Title="CF Following v1"
         Width="525"
         Height="350"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
+        TextElement.FontSize="16"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/Generic.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
-        <Button HorizontalAlignment="Left" Content="Button" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <!--  header  -->
+            <RowDefinition Height="*" />
+            <!--  main content  -->
+            <RowDefinition Height="Auto" />
+            <!--  status bar  -->
+        </Grid.RowDefinitions>
+
+        <!--  region header  -->
+        <Border Background="{StaticResource LightBlueColor}">
+            <Grid>
+                <TextBlock Style="{StaticResource TitleTextStyle}" Text="ACCOUNT" />
+
+                <!--  button show notifications  -->
+                <Button Margin="16 0" HorizontalAlignment="Right">
+                    <StackPanel Orientation="Horizontal">
+                        <Viewbox Width="24" Height="24">
+                            <Canvas Width="24" Height="24">
+                                <Path Data="M13,13H11V7H13M13,17H11V15H13M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" Fill="{StaticResource RedColor}" />
+                            </Canvas>
+                        </Viewbox>
+                        <TextBlock VerticalAlignment="Center"
+                                   Padding="4 0"
+                                   Text="2" />
+                    </StackPanel>
+                </Button>
+            </Grid>
+        </Border>
+        <!--  endregion  -->
+
+        <!--  region main content  -->
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="6*" />
+                <!--  accounts  -->
+                <RowDefinition Height="4*" />
+                <!--  list  -->
+            </Grid.RowDefinitions>
+
+            <!--  accounts  -->
+            <material:Card Margin="4"
+                           VerticalAlignment="Stretch"
+                           Background="{StaticResource GreyColor}"
+                           Padding="8">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <!--  button add bet account  -->
+                    <Button HorizontalAlignment="Left">
+                        <StackPanel Orientation="Horizontal">
+                            <Viewbox Width="24" Height="24">
+                                <Canvas Width="24" Height="24">
+                                    <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="#fff" />
+                                </Canvas>
+                            </Viewbox>
+                            <TextBlock Style="{StaticResource TextButtonIconStyle}" Text="Add bet account" />
+                        </StackPanel>
+                    </Button>
+
+                    <TextBlock HorizontalAlignment="Right"
+                               Style="{StaticResource TotalAccountTextStyle}"
+                               Text="2/3 accounts" />
+
+                    <!--  accounts list  -->
+                    <ScrollViewer Grid.Row="1"
+                                  Padding="0 8 0 0"
+                                  VerticalScrollBarVisibility="Auto">
+                        <ItemsControl />
+                    </ScrollViewer>
+                </Grid>
+            </material:Card>
+
+            <!--  list  -->
+            <Border Grid.Row="1" Background="Indigo" />
+        </Grid>
+        <!--  endregion  -->
+
+        <!--  region status bar  -->
+        <StatusBar Grid.Row="2"
+                   MinHeight="32"
+                   Background="{StaticResource DarkColor}" />
+        <!--  endregion  -->
     </Grid>
 </Window>
