--- a/CFFollowingWPF/Themes/Theme.MainWindow.xaml
+++ b/CFFollowingWPF/Themes/Theme.MainWindow.xaml
@@ -10,4 +10,14 @@
         <Setter Property="Foreground" Value="Indigo" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
+    
+    <ItemsPanelTemplate x:Key="AccountPanelTemplate">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+        </Grid>
+    </ItemsPanelTemplate>
 </ResourceDictionary>
