--- a/CFFollowingWPF/Themes/Generic.xaml
+++ b/CFFollowingWPF/Themes/Generic.xaml
@@ -8,6 +8,7 @@
     <SolidColorBrush x:Key="GreyColor">#BDBDBD</SolidColorBrush>
     <SolidColorBrush x:Key="GreenColor">#4caf50</SolidColorBrush>
     <SolidColorBrush x:Key="BlueColor">#2196F3</SolidColorBrush>
+    <SolidColorBrush x:Key="DeepPurpleColor">#673AB7</SolidColorBrush>
 
     <!--  size  -->
     <system:Int32 x:Key="BaseFontSize">16</system:Int32>
