--- a/CFFollowingWPF/Views/BetAccount.xaml
+++ b/CFFollowingWPF/Views/BetAccount.xaml
@@ -1,29 +1,37 @@
 ﻿<base:BaseUserControl x:Class="CFFollowingWPF.Views.BetAccount"
-            
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:base="clr-namespace:CFFollowingWPF.Bases"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                      xmlns:material="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"                      
-                      
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:material="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:system="clr-namespace:System;assembly=mscorlib"
                       TextBlock.FontSize="16"
-             mc:Ignorable="d" 
-                      
-             d:DesignHeight="300" d:DesignWidth="500">
-    
+                      d:DesignWidth="500"
+                      mc:Ignorable="d">
+
     <base:BaseUserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <x:Array x:Key="Temp" Type="{x:Type system:String}">
+                <system:String>Lorem ipsum 01</system:String>
+                <system:String>Lorem 02</system:String>
+                <system:String>Ipsum 03</system:String>
+                <system:String>Lipsum 04</system:String>
+                <system:String>Lorem</system:String>
+                <system:String>Ipsum</system:String>
+            </x:Array>
+
         </ResourceDictionary>
     </base:BaseUserControl.Resources>
-    
-    <material:Card VerticalAlignment="Stretch" 
-                   HorizontalAlignment="Stretch" 
+
+    <material:Card HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch"
                    HorizontalContentAlignment="Stretch"
-                   VerticalContentAlignment="Stretch"                   
+                   VerticalContentAlignment="Stretch"
                    Background="#bdbdbd">
         <Grid>
             <Grid.RowDefinitions>
@@ -31,20 +39,22 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            
-            <!-- header -->
-            <TextBlock Text="BET ACCOUNT"
-                       FontWeight="Medium"
-                       Background="{StaticResource LightBlueColor}"
-                       Foreground="#fff"
-                       Padding="8"/>
 
-            <Button Background="{StaticResource RedColor}" Style="{StaticResource MaterialDesignFloatingActionButton}"
-                    Grid.RowSpan="2"
-                    VerticalAlignment="Top"
+            <!--  header  -->
+            <TextBlock Background="{StaticResource LightBlueColor}"
+                       FontWeight="Medium"
+                       Foreground="#fff"
+                       Padding="8"
+                       Text="BET ACCOUNT" />
+
+            <Button Grid.RowSpan="2"
+                    Width="40"
+                    Height="40"
+                    Margin="8"
                     HorizontalAlignment="Right"
-                    Width="40" Height="40"
-                    Margin="8">
+                    VerticalAlignment="Top"
+                    Background="{StaticResource RedColor}"
+                    Style="{StaticResource MaterialDesignFloatingActionButton}">
                 <Viewbox Width="24" Height="24">
                     <Canvas Width="24" Height="24">
                         <Path Data="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" Fill="#fff" />
@@ -52,9 +62,9 @@
                 </Viewbox>
             </Button>
 
-            <!-- content -->
+            <!--  content  -->
             <StackPanel Grid.Row="1" Margin="8 8 8 0">
-                <!-- acc -->
+                <!--  acc  -->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -78,56 +88,99 @@
                         <TextBox />
                     </StackPanel>
                 </Grid>
-                
+
+                <!--  setting  -->
                 <Grid Margin="0 8">
                     <StackPanel HorizontalAlignment="Left">
-                        <CheckBox Content="Single follow / match" 
-                                  Margin="0 4"
+                        <CheckBox Margin="0 4"
+                                  Content="Single follow / match"
                                   Padding="4 0" />
-                        <CheckBox Content="Any odds" 
-                                  Margin="0 4"
+                        <CheckBox Margin="0 4"
+                                  Content="Any odds"
                                   Padding="4 0" />
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Right">
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                            <TextBlock Text="Delay time (s)" VerticalAlignment="Center"  Padding="8 0" />
+                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                            <TextBlock VerticalAlignment="Center"
+                                       Padding="8 0"
+                                       Text="Delay time (s)" />
                             <TextBox MinWidth="32" MaxWidth="64" />
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                            <TextBlock Text="Max bet ($)" VerticalAlignment="Center" Padding="8 0" />
+                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                            <TextBlock VerticalAlignment="Center"
+                                       Padding="8 0"
+                                       Text="Max bet ($)" />
                             <TextBox MinWidth="100" MaxWidth="120" />
                         </StackPanel>
                     </StackPanel>
                 </Grid>
-                
-                <Border Padding="8" BorderBrush="{StaticResource GreenColor}"
-                        BorderThickness="2">
+
+                <!--  credit  -->
+                <Border BorderBrush="{StaticResource RedColor}"
+                        BorderThickness="2"
+                        Padding="8">
                     <TextBlock>
-                    <Run Text="Credit:" />
-                    <Run Text="Given" Foreground="{StaticResource GreenColor}" />
-                    <Run Text="|" Foreground="{StaticResource RedColor}" />
-                    <Run Text="Bet" Foreground="{StaticResource GreenColor}" />
-                    <Run Text="|" Foreground="{StaticResource RedColor}" />
-                    <Run Text="Profit &amp; Loss" Foreground="{StaticResource GreenColor}" />
+                        <Run Text="Credit:" />
+                        <Run Foreground="{StaticResource RedColor}" Text="Given" />
+                        <Run Foreground="{StaticResource DeepPurpleColor}" Text="|" />
+                        <Run Foreground="{StaticResource RedColor}" Text="Bet" />
+                        <Run Foreground="{StaticResource DeepPurpleColor}" Text="|" />
+                        <Run Foreground="{StaticResource RedColor}" Text="Profit &amp; Loss" />
                     </TextBlock>
                 </Border>
+
+                <material:Card Margin="0 4 0 0">
+                    <Grid VerticalAlignment="Stretch" Background="#fff">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <TextBlock FontSize="16"
+                                   FontWeight="Medium"
+                                   Padding="8"
+                                   Text="Follow Accounts" />
+                        <CheckBox Margin="8 0"
+                                  HorizontalAlignment="Right"
+                                  VerticalAlignment="Center"
+                                  Content="Follow all"
+                                  FontWeight="Bold"
+                                  Foreground="#4caf50"
+                                  Padding="4 0" />
+
+                        <Border VerticalAlignment="Bottom"
+                                BorderBrush="Indigo"
+                                BorderThickness="0 0 0 1" />
+
+                        <Border Grid.Row="1" MaxHeight="100">
+                            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                                <ItemsControl ItemTemplate="{StaticResource FollowAccountTemplate}"
+                                              ItemsPanel="{StaticResource FollowPanelTemplate}"
+                                              ItemsSource="{StaticResource Temp}"
+                                              Padding="8 8 8 0" />
+                            </ScrollViewer>
+                        </Border>
+                    </Grid>
+                </material:Card>
             </StackPanel>
-            
-            <!-- footer -->
+
+            <!--  footer  -->
             <DockPanel Grid.Row="2" Margin="8">
-                <Button DockPanel.Dock="Left" HorizontalAlignment="Left" Background="{StaticResource GreenColor}">
+                <Button HorizontalAlignment="Left"
+                        Background="{StaticResource GreenColor}"
+                        DockPanel.Dock="Left">
                     <StackPanel Orientation="Horizontal">
                         <Viewbox Width="24" Height="24">
                             <Canvas Width="24" Height="24">
                                 <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="#fff" />
                             </Canvas>
                         </Viewbox>
-                        <TextBlock Text="FOLLOW" Style="{StaticResource TextButtonIconStyle}" />
+                        <TextBlock Style="{StaticResource TextButtonIconStyle}" Text="FOLLOW" />
                     </StackPanel>
                 </Button>
-                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">                    
-                    <Button Content="BET"></Button>
-                    <Button Content="TRANS" Margin="8 0"></Button>
+                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                    <Button Content="BET" />
+                    <Button Margin="8 0" Content="TRANS" />
                     <Button Background="{StaticResource BlueColor}">
                         <Viewbox Width="24" Height="24">
                             <Canvas Width="24" Height="24">
@@ -135,7 +188,7 @@
                             </Canvas>
                         </Viewbox>
                     </Button>
-                    
+
                 </StackPanel>
             </DockPanel>
         </Grid>
